--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 /node_modules/
 /lib/
 /test/
+/dist/
 
-# top level source
-my-element.js
-my-element.js.map
-my-element.d.ts
-my-element.d.ts.map
 .idea/
